Use lower case for package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SharePoint.Tasks",
+  "name": "sharepoint.tasks",
   "version": "0.1.0",
   "description": "Build task for building SharePoint Add-Ins and Solutions with TFS Build 2015 (vNext)",
   "main": "gulpfile.js",
