Add gulp task for package extension

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-typescript": "2.6.0",
     "gulp-util": "^3.0.4",
     "shelljs": "^0.3.0",
+    "tfx-cli": "^0.3.6",
     "through2": "^0.6.3",
     "validator": "^3.33.0"
   },
