--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,11 +2,15 @@ environment:
   nodejs_version: "5.1.0"
 
 install:
+  - choco install gitversion.portable -pre -y
   - ps: Install-Product node $env:nodejs_version
   - npm install
   - npm install -g gulp
 
+before_build:
+  - ps: gitversion /l console /output buildserver
+
 test_script:
-  - gulp package
+  - gulp
 
 build: off
