--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,15 +12,15 @@ test_script:
   - gulp
   
   - ps: .\Deployment\Update-TaskVersion.ps1 .\_build\Tasks\SharePointAddInBuild\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
-  - cmd: 7z a "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip" -r .\_build\SharePointAddInBuild\*.*
+  - cmd: 7z a "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInBuild\*.*
   - cmd: appveyor PushArtifact "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip"
   
   - ps: .\Deployment\Update-TaskVersion.ps1 .\_build\Tasks\SharePointAddInPatching\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
-  - cmd: 7z a "SharePointAddInPatching_%GitVersion_NuGetVersion%.zip" -r .\_build\SharePointAddInPatching\*.*
+  - cmd: 7z a "SharePointAddInPatching_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInPatching\*.*
   - cmd: appveyor PushArtifact "SharePointAddInPatching_%GitVersion_NuGetVersion%.zip"
   
   - ps: .\Deployment\Update-TaskVersion.ps1 .\_build\Tasks\SharePointAddInVersioning\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
-  - cmd: 7z a "SharePointAddInVersioning_%GitVersion_NuGetVersion%.zip" -r .\_build\SharePointAddInVersioning\*.*
+  - cmd: 7z a "SharePointAddInVersioning_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInVersioning\*.*
   - cmd: appveyor PushArtifact "SharePointAddInVersioning_%GitVersion_NuGetVersion%.zip"
   
 build: off
