--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,9 @@ test_script:
   - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInBuild\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
   - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInPatching\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
   - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInVersioning\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
+  - ps: .\Deployment\Update-ExtensionVersion.ps1 .\vss-extension.json $env:GitVersion_MajorMinorPatch
 
-  - gulp
+  - gulp package
   
   - cmd: 7z a "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInBuild\*.*
   - cmd: appveyor PushArtifact "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip"
@@ -24,5 +25,7 @@ test_script:
   
   - cmd: 7z a "SharePointAddInVersioning_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInVersioning\*.*
   - cmd: appveyor PushArtifact "SharePointAddInVersioning_%GitVersion_NuGetVersion%.zip"
+  
+  - cmd: appveyor PushArtifact ".\_build\Extensions\ioz.sharepoint-build-tasks-%GitVersion_MajorMinorPatch%.vsix"
   
 build: off
