--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,15 +10,15 @@ install:
 test_script:
   - ps: gitversion /l console /output buildserver
 
-  - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInBuild\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
+  - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\PackageSharePointAddIn\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
   - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInPatching\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
   - ps: .\Deployment\Update-TaskVersion.ps1 .\Tasks\SharePointAddInVersioning\task.json $env:GitVersion_Major $env:GitVersion_Minor $env:GitVersion_Patch
   - ps: .\Deployment\Update-ExtensionVersion.ps1 .\vss-extension.json $env:GitVersion_MajorMinorPatch
 
   - gulp package
   
-  - cmd: 7z a "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInBuild\*.*
-  - cmd: appveyor PushArtifact "SharePointAddInBuild_%GitVersion_NuGetVersion%.zip"
+  - cmd: 7z a "PackageSharePointAddIn_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\PackageSharePointAddIn\*.*
+  - cmd: appveyor PushArtifact "PackageSharePointAddIn_%GitVersion_NuGetVersion%.zip"
   
   - cmd: 7z a "SharePointAddInPatching_%GitVersion_NuGetVersion%.zip" -r .\_build\Tasks\SharePointAddInPatching\*.*
   - cmd: appveyor PushArtifact "SharePointAddInPatching_%GitVersion_NuGetVersion%.zip"
