--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ install:
   - choco install gitversion.portable -pre -y
   - ps: Install-Product node $env:nodejs_version
   - npm install
-  - npm install -g gulp
+  - npm install -g gulpjs/gulp-cli#4.0
 
 test_script:
   - ps: gitversion /l console /output buildserver
