--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/iozag/sharepoint-build-tasks",
   "devDependencies": {
     "del": "^1.1.1",
-    "gulp": "git://github.com/gulpjs/gulp.git#4.0",
+    "gulp": "^3.9.1",
     "gulp-typescript": "2.6.0",
     "gulp-util": "^3.0.4",
     "shelljs": "^0.3.0",
