--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iozag/sharepoint-build-tasks"
+    "url": "https://github.com/argusnetch/sharepoint-build-tasks"
   },
   "keywords": [
     "VSO",
@@ -16,12 +16,12 @@
     "tasks",
     "sharepoint"
   ],
-  "author": "IOZ AG",
+  "author": "ARGUSnet AG",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/iozag/sharepoint-build-tasks/issues"
+    "url": "https://github.com/argusnetch/sharepoint-build-tasks/issues"
   },
-  "homepage": "https://github.com/iozag/sharepoint-build-tasks",
+  "homepage": "https://github.com/argusnetch/sharepoint-build-tasks",
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.9.1",
